<resources>
    <string name="app_name">lab4</string>

    <string name="loading">Loading...</string>
    <string name="action_add">Add</string>
    <string name="hint_title">title</string>
    <string name="snackbar_success_added_task">Task added...</string>
    <string name="snackbar_failure_added_task">Oopps... Error</string>
    <string name="text_no_favorite">No Favorites</string>
    <string name="snackbar_error">error</string>
    <string name="hint_desc">description</string>
    <string name="hint_status">status</string>
    <string name="hint_category">categrory</string>
    <string name="hint_duration">duration</string>

</resources>